<resources>
    <string name="app_name">Ventas</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Vender</string>
    <string name="menu_slideshow">Chat</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">LogOut</string>
    <string name="search">Search</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="o_ingresa_con_tu_email">O ingresa con tu Email</string>
    <string name="ingresa_tu_email">Ingresa tu Email</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="eres_nuevo">¿Eres Nuevo?</string>
    <string name="registrate">Registrate</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="title_activity_list">ListActivity</string>
</resources>
